Create get user my email
