# api/openapi.yaml
@@ -179,6 +179,40 @@ paths:
         '406':
           description: Invalid Input
       x-swagger-router-controller: Member 
+  /user/email/{email}:
+     get:
+      tags:
+        - member
+      summary: ดูสมาชิก
+      operationId: getUserByEmail
+      parameters:
+        - name: email
+          in: path
+          description: user Email
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: 
+                    type: integer
+                    format: int32
+                    example: 200
+                  data:
+                    $ref: '#/components/schemas/User'
+        '405':
+          description: Method not allowed
+        '406':
+          description: Invalid Input
+      x-swagger-router-controller: Member 
   /user/password:
     put:
       tags:
